--- a/Annuaire/View/AccueilView.xaml
+++ b/Annuaire/View/AccueilView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:Template="clr-namespace:Annuaire.View.Template"
+             xmlns:Template="clr-namespace:Annuaire.View.Template" xmlns:View="clr-namespace:Annuaire.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="Cyan">
     <Grid>
@@ -18,22 +18,59 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
-       
-        <!-- Espace recherche -->
-        <Grid Grid.Row="0" Grid.Column="1" Background="Bisque" Height="100"></Grid>
 
+        <!-- Espace recherche -->
+        <Grid Grid.Row="0" Grid.Column="1" Background="Bisque" Height="100">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Text="Rechercher un salarié :" FontSize="18"   Margin="10" FontStyle="Italic"/>
+                <TextBox Grid.Column="1" Width="500" Margin="10" HorizontalAlignment="Left" Text="{Binding SearchQuery}" TextChanged="textChangedEventHandler" />
+            </Grid>
+
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="1" Orientation="Horizontal">
+                    <TextBlock  Height="30" Text="Recherche par : " FontSize="16" FontWeight="Bold" Margin="0,0,10,0"/>
+                    <ComboBox   Height="30"  ItemsSource="{Binding ListeModeRecherche}"  SelectedItem="{Binding CurrentSearchMethod}" Width="150"/>
+                </StackPanel>
+
+            </Grid>
+
+        </Grid>
+
+        <!-- Formulaire de détails du salarié  -->
+        <View:SalarieDetails Grid.Row="1" Grid.Column="1" Panel.ZIndex="10" Visibility="{Binding DetailsSalarieVisibility}"/>
+
+        <!-- Loading screen -->
         <Grid Grid.Row="1" Grid.Column="1" Visibility="{Binding SalarieLoadingVisibility}">
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" TextWrapping="Wrap" Text="Chargement des salariés..."/>
         </Grid>
         <!-- Espace affichage Salaries-->
+        
         <Grid Grid.Row="1" Grid.Column="1" Visibility="{Binding SalarieListVisibility}">
             <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
 
+            <Template:ButonNormal Grid.Row="0" Content="Ajouter un salarié" Command="{Binding OuvrirAjoutSalarieCommad}" Visibility="{Binding AdminContentVisibility}" HorizontalAlignment="Center" Width="200" Height="50" />
+
+
             <!-- Espace des deux listes gauches et droite -->
-            <Grid Grid.Row="0" HorizontalAlignment="Center">
+            <Grid Grid.Row="1" HorizontalAlignment="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="20"/>
@@ -49,14 +86,14 @@
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*" />
-                                    
+                                    <ColumnDefinition Width="40" />
                                     <ColumnDefinition Width="40" />
 
                                 </Grid.ColumnDefinitions>
 
                                 <TextBlock  Grid.Column="0" Text="{Binding FullName}" FontSize="20"  HorizontalAlignment="Left" FontWeight="Bold" Margin="10" />
-                                <Template:BoutonConsultation Grid.Column="1" Margin="3"/>
-
+                                <Template:BoutonConsultation Grid.Column="1" Margin="3" Command="{Binding ConsultSalarieCommand}"/>
+                                <Template:ButtonDelete Grid.Column="2" Margin="3" Command="{Binding DeleteSalarieCommand}" Visibility="{Binding AdminContentVisibility}"/>
 
                             </Grid>
                         </DataTemplate>
@@ -80,12 +117,14 @@
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="40" />
+                                    <ColumnDefinition Width="40" />
 
                                 </Grid.ColumnDefinitions>
 
                                 <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding FullName}" FontSize="20"  HorizontalAlignment="Left" FontWeight="Bold" Margin="10" />
-                                <Template:BoutonConsultation Grid.Column="1" Margin="3" />
-
+                                
+                                <Template:BoutonConsultation Grid.Column="1" Margin="3" Command="{Binding ConsultSalarieCommand}"/>
+                                <Template:ButtonDelete Grid.Column="2" Margin="3" Command="{Binding DeleteSalarieCommand}" Visibility="{Binding AdminContentVisibility}"/>
 
                             </Grid>
                         </DataTemplate>
@@ -100,16 +139,16 @@
 
 
             </Grid>
-            
+
             <!-- Espace des boutons d'affichage de page-->
-            <Grid Grid.Row="1" HorizontalAlignment="Center">
+            <Grid Grid.Row="2" HorizontalAlignment="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <!--<Button Grid.Column="0" Content="Page Précedente" Command="{Binding PreviousPageCommand}"/>-->
+
                 <Template:ButonNormal Grid.Column="0" Content="Page Précedente" Command="{Binding PreviousPageCommand}" Width="100" />
                 <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center" Margin="10">
                     <TextBlock FontSize="16" FontWeight="Bold" Text="{Binding CurrentPage}"/>
@@ -117,7 +156,7 @@
                     <TextBlock FontSize="16" FontWeight="Bold" Text="{Binding NumberOfPages}"/>
                 </StackPanel>
                 <Template:ButonNormal  Grid.Column="2" Content="Page Suivante" Command="{Binding NextPageCommand}" Width="100" />
-                <!--<Button Grid.Column="2" Content="Page Suivante" Command="{Binding NextPageCommand}"/>-->
+
 
             </Grid>
         </Grid>
